--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "production": "pm2 start index.js --name knowledge-backend"
+    "production": "pm2 start index.js --name project-manager"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +16,10 @@
     "consign": "0.1.6",
     "cors": "2.8.4",
     "express": "4.16.3",
-    "jwt-simple": "0.5.1",
+    "jwt-simple": "^0.5.6",
     "knex": "0.15.2",
     "moment": "2.22.2",
-    "mongoose": "^5.2.17",
+    "mongoose": "^5.9.4",
     "node-schedule": "1.3.0",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
